k8s/frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coffeeshop-frontend
  template:
    metadata:
      labels:
        app: coffeeshop-frontend
    spec:
      containers:
      - name: coffeeshop-frontend
        image: prasanthrk/coffeeshop-frontend:v2
        ports:
        - containerPort: 80
---
---
apiVersion: v1
kind: Service
metadata:
  name: coffeeshop-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: coffeeshop-frontend
  ports:
  - port: 80
    targetPort: 80
---
