k8s/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-db
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.16-bullseye
        ports:
        - containerPort: 5432
---
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
