k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: api.coffeshop.com
    http:
      paths: 
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: coffeeshop-backend-service
            port:
              number: 90
