k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: coffeshop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coffeeshop-frontend-service
            port:
              number: 80
